Fixed bug with only one not showing
Fixed bug where only go back button showed with only one note showing.
Also deleted delete button on Note comp (moved to Notes comp)

files modified:
Note.js
Notes.js
Note.less
Notes.less

--- a/note-app/src/styles/less/Notes/Notes.less
+++ b/note-app/src/styles/less/Notes/Notes.less
@@ -29,6 +29,10 @@
 				padding: 4px;
 
 				font-size: 0.9rem;
+
+				&:hover {
+					cursor: pointer;
+				}
 			}
 		}
 
